Partners page fixed

--- a/assets/src/pug/partners.pug
+++ b/assets/src/pug/partners.pug
@@ -139,7 +139,7 @@ block content
                       span niall@lawlorpartners.ie
                   li
                     a(href="#") 
-                      +icon('email')
+                      +icon('linkedin')
                       span LinkedIn
                       +icon('arrow-right')
                 dl
