--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "bootstrap/scss/bootstrap-grid";
 @import "bootstrap/scss/bootstrap-reboot";
 @import "bootstrap/scss/transitions";
+@import "bootstrap/scss/utilities";
 @import "bootstrap/scss/nav";
 @import "swiper/swiper.scss";
 @import "choices.js/src/styles/choices.scss";
