--- a/assets/src/styles/components/_partner.scss
+++ b/assets/src/styles/components/_partner.scss
@@ -83,15 +83,17 @@
       margin: 0 0 3.5rem;
       padding: 0;
       display: flex;
-      overflow-x: auto;
+      flex-wrap: wrap;
     }
 
     li {
       font-size: 1.4rem;
       white-space: nowrap;
+      margin-top: .5rem;
+      margin-bottom: .5rem;
 
-      &:not(:first-child) {
-        margin-left: 4rem;
+      &:not(:last-child) {
+        margin-right: 4rem;
       }
     }
 
